--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,17 @@
   <head>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <title></title>
+    <meta name="keyword" content="#">
+    <meta name="description" content="#">
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+    </script>
+    <![endif]-->
   </head>
 
   <body>
-
-
-  
+    <div id="app"></div><%# note id=appがないとVueが張り付かない %>
     <%= yield %>
   </body>
 </html>
