--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,9 @@
   <head>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <title></title>
-    <meta name="keyword" content="#">
-    <meta name="description" content="#">
+    <title>dummy</title>
+    <meta name="keyword" content="dummy">
+    <meta name="description" content="dummy">
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
     </script>
