--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,6 @@
   <body>
     <div id="app"></div><%# NOTE: id=appがないとVueが張り付かない %>
     <%= yield %>
-    <%= debug(params) if Rails.env.development? %>
+    <%# <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
