--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,7 @@
   </head>
 
   <body>
-    <div id="app"></div><%# NOTE: id=appがないとVueが張り付かない %>
+    <div id="app"></div>
     <%= yield %>
-    <%# <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
